syntax = "proto3";

package audiobook.language.word.v1;

option go_package = "github.com/seidu626/audiobook/backend/services/language/proto/word";

import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";
import "services/language/proto/entities/entities.proto";
import "validate/validate.proto";

// Ref:
// https://github.com/seizadi/atlas-template/blob/master/resolved/pkg/pb/cmdb.proto

// Word Service
service WordService {
  rpc Exist(ExistRequest) returns (ExistResponse) {
    option (google.api.http) = {
      get : "/v1/Word/{id}"
    };
  }
  rpc List(ListRequest) returns (ListResponse) {
    option (google.api.http) = {
      get : "/v1/Word"
    };
  }
  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get : "/v1/Word/{id}"
    };
  }
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post : "/v1/Word"
      body : "*"
    };
  }
  rpc Update(UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      put : "/v1/Word"
      body : "*"
    };
  }
  rpc Delete(DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      delete : "/v1/Word/{id}"
    };
  }
}

// FIXME: https://github.com/envoyproxy/protoc-gen-validate/issues/223
// with Workaround in .override.go
message ExistRequest {
  google.protobuf.StringValue id = 1
      [ (validate.rules).string.uuid = true ]; // Not Working
  google.protobuf.StringValue content = 2
      [ (validate.rules).string = {min_len : 4} ];
}

message ExistResponse {
  option (validate.disabled) = true;
  bool result = 1;
}

message ListRequest {
  google.protobuf.UInt32Value limit = 1
      [ (validate.rules).uint32 = {gte : 1 lte : 100} ];
  google.protobuf.UInt32Value page = 2 [ (validate.rules).uint32.gte = 1 ];
  google.protobuf.StringValue sort = 3;
  google.protobuf.StringValue content = 4
      [ (validate.rules).string = {min_len : 4} ];
  google.protobuf.StringValue audio_src = 5
      [ (validate.rules).string.min_len = 3 ];
  audiobook.language.entities.v1.Language language = 6;
}

message ListResponse {
  option (validate.disabled) = true;
  repeated audiobook.language.entities.v1.Word results = 1;
  uint32 total = 2;
}

message GetRequest {
  google.protobuf.StringValue id = 1
      [ (validate.rules).string.uuid = true ]; // Not Working
  google.protobuf.StringValue content = 2
      [ (validate.rules).string = {min_len : 4} ];
  google.protobuf.StringValue audio_src = 3
      [ (validate.rules).string.min_len = 3 ];
}

message GetResponse {
  option (validate.disabled) = true;
  audiobook.language.entities.v1.Word result = 1;
  // basic.Error error =2;
}

message CreateRequest {
  google.protobuf.StringValue content = 1
      [ (validate.rules).string = {min_len : 4} ];
  google.protobuf.StringValue audio_src = 2
      [ (validate.rules).string.min_len = 3 ];
  string skill_id = 3 [ (validate.rules).string.min_len = 3 ];
}

message CreateResponse {
  option (validate.disabled) = true;
  audiobook.language.entities.v1.Word result = 1;
}

message UpdateRequest {
  google.protobuf.StringValue id = 1
      [ (validate.rules).string.uuid = true ]; // Not Working
  google.protobuf.StringValue content = 2
      [ (validate.rules).string = {min_len : 4} ];
  google.protobuf.StringValue audio_src = 3
      [ (validate.rules).string.min_len = 3 ];
  string skill_id = 4 [ (validate.rules).string.min_len = 3 ];
}

message UpdateResponse {
  option (validate.disabled) = true;
  audiobook.language.entities.v1.Word result = 1;
}

message DeleteRequest {
  google.protobuf.StringValue id = 1
      [ (validate.rules).string.uuid = true ]; // Not Working
}

message DeleteResponse {
  option (validate.disabled) = true;
  audiobook.language.entities.v1.Word result = 1;
}
